[gd_scene load_steps=17 format=2]

[ext_resource path="res://Assets/Scripts/AsteroidScripts/AsteroidManager_BoundaryTool.gd" type="Script" id=1]
[ext_resource path="res://Assets/Sprites/background.png" type="Texture" id=2]
[ext_resource path="res://Assets/Scripts/AsteroidScripts/AsteroidManager.gd" type="Script" id=3]
[ext_resource path="res://Assets/Audio/Music/menuTheme.mp3" type="AudioStream" id=4]
[ext_resource path="res://Assets/Fonts/pixelmix-font/PixelmixRegular-z07w.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://Assets/Sprites/Buttons/regularButton.png" type="Texture" id=6]
[ext_resource path="res://Assets/Scripts/GUI/Menus/MainMenu.gd" type="Script" id=7]
[ext_resource path="res://Assets/Themes/MainMenu.tres" type="Theme" id=8]
[ext_resource path="res://Assets/Scenes/Other/AudioTheme.tscn" type="PackedScene" id=9]
[ext_resource path="res://Assets/Scripts/Other/BulletSpawner.gd" type="Script" id=10]
[ext_resource path="res://Assets/Audio/Other/explosion03.mp3" type="AudioStream" id=11]
[ext_resource path="res://Assets/Audio/Other/explosion02.mp3" type="AudioStream" id=12]

[sub_resource type="Shader" id=12]
code = "shader_type canvas_item;

uniform float starPercentage;
uniform vec4 starColour;
uniform vec4 backColour;

float random (vec2 uv) {
    return fract(sin(dot(uv.xy,
        vec2(12.9898,78.233))) * 43758.5453123);
}

void fragment() {
	if (random(UV) < (starPercentage/100.0)) {
		COLOR = starColour;
	}
	else {
		COLOR = backColour;
	}
}"

[sub_resource type="ShaderMaterial" id=8]
shader = SubResource( 12 )
shader_param/starPercentage = 0.001
shader_param/starColour = Plane( 1, 1, 0.8, 1 )
shader_param/backColour = Plane( 0, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=13]
bg_color = Color( 0, 0, 0, 0 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 1, 0.607843, 0, 1 )

[sub_resource type="DynamicFont" id=11]
size = 40
font_data = ExtResource( 5 )

[node name="Menu" type="Node2D"]

[node name="AudioGroup" type="Node2D" parent="."]

[node name="AudioTheme" parent="AudioGroup" instance=ExtResource( 9 )]
stream = ExtResource( 4 )

[node name="SmallAsteroidBreak" type="AudioStreamPlayer" parent="AudioGroup" groups=["AudioStream"]]
stream = ExtResource( 12 )
volume_db = -15.0
bus = "SFX"

[node name="LargeAsteroidBreak" type="AudioStreamPlayer" parent="AudioGroup" groups=["AudioStream"]]
stream = ExtResource( 11 )
volume_db = -3.0
bus = "SFX"

[node name="Background" type="Sprite" parent="."]
material = SubResource( 8 )
position = Vector2( 3, 2 )
scale = Vector2( 2.01111, 2.01111 )
texture = ExtResource( 2 )

[node name="GameLayer" type="CanvasLayer" parent="."]
follow_viewport_enable = true

[node name="Camera2D" type="Camera2D" parent="GameLayer"]
current = true
zoom = Vector2( 2, 2 )

[node name="AsteroidManager" type="Node2D" parent="GameLayer"]
position = Vector2( -1, 0 )
script = ExtResource( 3 )
spawnBoundaries = Vector2( 626, 374 )
defaultSizeChance = 0.5
startingInterval = 2.0
minimumInterval = 2.0

[node name="BoundaryTool" type="Node2D" parent="GameLayer/AsteroidManager"]
script = ExtResource( 1 )

[node name="Timer" type="Timer" parent="GameLayer/AsteroidManager"]

[node name="ParticleParent" type="Node2D" parent="GameLayer" groups=["ParticleParent"]]

[node name="BulletSpawner" type="Node2D" parent="GameLayer"]
script = ExtResource( 10 )
rotationOffset = 25.0
bulletColours = PoolColorArray( 0.054902, 1, 0, 1, 0, 0.952941, 1, 1, 0.85098, 0, 1, 1, 0.85098, 1, 0, 1, 1, 0.447059, 0, 1 )

[node name="Timer" type="Timer" parent="GameLayer/BulletSpawner"]
wait_time = 1.75
autostart = true

[node name="UILayer" type="CanvasLayer" parent="."]
pause_mode = 2
layer = 2

[node name="Menu" type="Control" parent="UILayer"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 8 )
script = ExtResource( 7 )

[node name="Panel" type="Panel" parent="UILayer/Menu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -136.0
margin_top = -137.0
margin_right = 136.0
margin_bottom = -75.0
size_flags_horizontal = 4
size_flags_vertical = 4
custom_styles/panel = SubResource( 13 )

[node name="Title" type="Label" parent="UILayer/Menu/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 11 )
text = "Astraeus"
align = 1
valign = 1
uppercase = true

[node name="ButtonContainer" type="VBoxContainer" parent="UILayer/Menu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -195.0
margin_top = -49.0
margin_right = 195.0
margin_bottom = 117.0
alignment = 1

[node name="PlayButton" type="TextureButton" parent="UILayer/Menu/ButtonContainer"]
margin_left = 107.0
margin_right = 282.0
margin_bottom = 30.0
rect_min_size = Vector2( 175, 30 )
size_flags_horizontal = 4
size_flags_vertical = 4
texture_hover = ExtResource( 6 )
expand = true

[node name="Label" type="Label" parent="UILayer/Menu/ButtonContainer/PlayButton"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -22.0
margin_top = -8.0
margin_right = 22.0
margin_bottom = 8.0
size_flags_horizontal = 4
text = "play"
align = 1
valign = 1

[node name="OptionsButton" type="TextureButton" parent="UILayer/Menu/ButtonContainer"]
margin_left = 107.0
margin_top = 34.0
margin_right = 282.0
margin_bottom = 64.0
rect_min_size = Vector2( 175, 30 )
size_flags_horizontal = 4
size_flags_vertical = 4
texture_hover = ExtResource( 6 )
expand = true

[node name="Label" type="Label" parent="UILayer/Menu/ButtonContainer/OptionsButton"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -40.0
margin_top = -8.0
margin_right = 40.0
margin_bottom = 8.0
size_flags_horizontal = 4
text = "options"
align = 1
valign = 1

[node name="HowToPlayButton" type="TextureButton" parent="UILayer/Menu/ButtonContainer"]
margin_left = 107.0
margin_top = 68.0
margin_right = 282.0
margin_bottom = 98.0
rect_min_size = Vector2( 175, 30 )
size_flags_horizontal = 4
size_flags_vertical = 4
texture_hover = ExtResource( 6 )
expand = true

[node name="Label" type="Label" parent="UILayer/Menu/ButtonContainer/HowToPlayButton"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -61.5
margin_top = -8.0
margin_right = 62.5
margin_bottom = 8.0
size_flags_horizontal = 4
text = "how to play"
align = 1
valign = 1

[node name="CreditsButton" type="TextureButton" parent="UILayer/Menu/ButtonContainer"]
margin_left = 107.0
margin_top = 102.0
margin_right = 282.0
margin_bottom = 132.0
rect_min_size = Vector2( 175, 30 )
size_flags_horizontal = 4
size_flags_vertical = 4
texture_hover = ExtResource( 6 )
expand = true

[node name="Label" type="Label" parent="UILayer/Menu/ButtonContainer/CreditsButton"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -40.0
margin_top = -8.0
margin_right = 40.0
margin_bottom = 8.0
size_flags_horizontal = 4
text = "credits"
align = 1
valign = 1

[node name="QuitButton" type="TextureButton" parent="UILayer/Menu/ButtonContainer"]
margin_left = 107.0
margin_top = 136.0
margin_right = 282.0
margin_bottom = 166.0
rect_min_size = Vector2( 175, 30 )
size_flags_horizontal = 4
size_flags_vertical = 4
texture_hover = ExtResource( 6 )
expand = true

[node name="Label" type="Label" parent="UILayer/Menu/ButtonContainer/QuitButton"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -22.0
margin_top = -8.0
margin_right = 22.0
margin_bottom = 8.0
size_flags_horizontal = 4
text = "quit"
align = 1

[connection signal="timeout" from="GameLayer/AsteroidManager/Timer" to="GameLayer/AsteroidManager" method="_on_Timer_timeout"]
[connection signal="timeout" from="GameLayer/BulletSpawner/Timer" to="GameLayer/BulletSpawner" method="_on_Timer_timeout"]
[connection signal="pressed" from="UILayer/Menu/ButtonContainer/PlayButton" to="UILayer/Menu" method="_on_PlayButton_pressed"]
[connection signal="pressed" from="UILayer/Menu/ButtonContainer/OptionsButton" to="UILayer/Menu" method="_on_OptionsButton_pressed"]
[connection signal="pressed" from="UILayer/Menu/ButtonContainer/HowToPlayButton" to="UILayer/Menu" method="_on_HowToPlayButton_pressed"]
[connection signal="pressed" from="UILayer/Menu/ButtonContainer/CreditsButton" to="UILayer/Menu" method="_on_CreditsButton_pressed"]
[connection signal="pressed" from="UILayer/Menu/ButtonContainer/QuitButton" to="UILayer/Menu" method="_on_QuitButton_pressed"]
